exploits/2025/CVE-2025-1974/CVE-2025-1974-poc/example-ingress.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": {
    "name": "ingress-myservicea"
  },
  "spec": {
    "rules": [
      {
        "host": "myservicea.foo.org",
        "http": {
          "paths": [
            {
              "path": "/",
              "pathType": "Prefix",
              "backend": {
                "service": {
                  "name": "myservicea",
                  "port": {
                    "number": 80
                  }
                }
              }
            }
          ]
        }
      }
    ],
    "ingressClassName": "nginx"
  }
}
